# matlab-streaming

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  plot_hist.py  run_stream.m  vcpkg-configuration.json  vcpkg.json
matlab/: run_stream.m
python/: client.py  plot_hist.py
src/: client.cxx  constants.hpp  server.cxx  test.cpp
